fix: scrollbars in print mode

--- a/src/components/Dashboard/styles/PrintActionsBar.module.css
+++ b/src/components/Dashboard/styles/PrintActionsBar.module.css
@@ -27,4 +27,8 @@
     .container {
         display: none;
     }
+
+    .topMargin {
+        margin-top: 0px;
+    }
 }
